<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MSUFCU Member Reviews</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="loans">Loans</string>
    <string name="accounts">accounts</string>
    <string name="certificates"><![CDATA[Certificates & IRA]]></string>
    <string name="services">Services</string>

    <string name="product_name" tools:ignore="UnusedResources">Product 1</string>
    <string name="write_review" tools:ignore="UnusedResources">Write Review</string>

    <string name="Prod_images">image</string>


    <string name="top_5_reviews1">Top 5 Reviews</string>
    <string name="MemberName1">Member1</string>
    <string name="ratingView1" tools:ignore="UnusedResources">rating</string>
    <string name="prod_review1">I really had a great experience with this product.
        I have enjoyed every aspect.</string>

    <string name="top_5_review2" tools:ignore="UnusedResources">Top 5 Reviews</string>
    <string name="MemberName2">Member2</string>
    <string name="ratingView2" tools:ignore="UnusedResources">rating</string>
    <string name="prod_review2" tools:ignore="UnusedResources">I really had a great experience with this product.
        I have enjoyed every aspect.</string>

    <string name="top_5_reviews3" tools:ignore="UnusedResources">Top 5 Reviews</string>
    <string name="MemberName3">Member3</string>
    <string name="ratingView3" tools:ignore="UnusedResources">rating</string>
    <string name="prod_review3">I really had a great experience with this product.
        I have enjoyed every aspect.</string>

    <string name="top_5_reviews4" tools:ignore="UnusedResources">Top 5 Reviews</string>
    <string name="MemberName4">Member4</string>
    <string name="ratingView4" tools:ignore="UnusedResources">rating</string>
    <string name="prod_review4">I really had a great experience with this product.
        I have enjoyed every aspect.</string>

    <string name="top_5_reviews5" tools:ignore="UnusedResources">Top 5 Reviews</string>
    <string name="MemberName5">Member5</string>
    <string name="ratingView5" tools:ignore="UnusedResources">rating</string>
    <string name="prod_review5">I really had a great experience with this product.
        I have enjoyed every aspect.</string>

    <string name="review1">I really had a great experience with this product.
        I have enjoyed every aspect.</string>

    <string name="ratingText">Rating</string>
    <string name="Submit">Submit</string>
    <string name="See_All_Reviews">See All Reviews</string>
    <string name="Write_Review">Write Review</string>
    <string name="Visa_Credit_Card">Visa Credit Card</string>
    <string name="CreditCardImage">Credit Card Image</string>
    <string name="TextView">TextView</string>
    <string name="ProductName">ProductName</string>
    <string name="TextView1" tools:ignore="UnusedResources">Text1</string>
    <string name="TextView2" tools:ignore="UnusedResources">Text2</string>
    <string name="ReviewImage" tools:ignore="UnusedResources">ReviewImage</string>
    <string name="details">details</string>
    <string name="Description">description</string>
    <string name="RatingImage">RatingImage</string>

    <string name="ViewProducts"><![CDATA[View All Products & Services]]></string>
    <string name="categories">View Categories</string>
    <string name="Preferences">Preferences</string>
    <string name="Logout">Logout</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="logo"> msufculogo</string>
    <string name="button_get">button_get</string>
    <string name="ParseJSON">Parse JSON</string>
    <string name="textview_id">textview_id</string>
    <string name="textview_username">textview_username</string>
    <string name="textview_password">textview_password</string>
    <string name="button_previous">button_previous</string>
    <string name="button_next">button_next</string>

    <string-array name="sort_by">
        <item>Sort By</item>
        <item>A-Z</item>
        <item>Rating</item>
        <item>User</item>
    </string-array>


</resources>
