<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.cse498.testapplication.activity_login"

    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"


    >

    <EditText
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:id="@+id/usernameText"

        android:maxLines ="1"
        android:maxLength ="20"
        android:textSize="24sp"
        android:padding="25dp"

        android:layout_gravity="center_horizontal"
        android:layout_alignRight="@+id/passwordText"
        android:layout_alignStart="@+id/passwordText"
        android:layout_above="@+id/passwordText"
        android:layout_alignEnd="@+id/passwordText"
        android:layout_alignLeft="@+id/passwordText"
        />

    <Button
        android:text="@string/login"
        android:id="@+id/btnLogin"
        android:onClick="OnClickLogin"

        android:layout_height="wrap_content"
        android:layout_width="260dp"

        android:layout_gravity="center_horizontal|center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:textSize="20sp"
        android:padding="30dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:layout_width="260dp"
        android:layout_height="wrap_content"

        android:inputType="textPassword"
        android:id="@+id/passwordText"
        android:text="@string/password"

        android:maxLines ="1"
        android:maxLength ="20"
        android:textSize="24sp"
        android:padding="25dp"

        android:layout_gravity="center_horizontal|center"
        android:layout_above="@+id/btnLogin"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_alignStart="@+id/btnLogin"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/logo"
        android:id="@+id/imageLogo"
        android:contentDescription="@string/logo"

        android:layout_above="@+id/usernameText"
        android:layout_alignRight="@+id/usernameText"
        android:layout_alignEnd="@+id/usernameText"
        android:layout_alignLeft="@+id/usernameText"
        android:layout_alignStart="@+id/usernameText"

        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:paddingTop="20dp"
        android:layout_marginTop="10dp"
        />


</RelativeLayout>
